--- a/index.html
+++ b/index.html
@@ -3,24 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" crossorigin="anonymous"> 
     <link rel="stylesheet" type="text/css" href="style/style.css"></link>
     <title>TODO list</title>
 </head>
 <body>
     <header><h1>TODO list</h1></header>
     
-    <script type="text/javascript" src="js/app.js"></script>
     <section class="container">
         <form class="form-group">
-            <input type="text" class="form-input" placeholder="Enter task"></input>
-            <button type="submit" class="form-submit" value="Submit"><i class="fa-solid fa-circle-plus"></i></button>
+            <input type="text" class="form-input" placeholder="Enter task" required />
+            <button type="submit"  class="form-submit" value="sent"><i class="fa-solid fa-circle-plus"></i></button>
+            <div class="select">
+                <select name="todos" class="select-todo">
+                    <option value="all">All</option>
+                    <option value="done">Done</option>
+                    <option value="todo">ToDo</option>
+                </select>
+    
+            </div>
+
         </form>
         <div class="todo-container">
-            <ul class="task"><p></p></ul>
+            <ul class="task-list">
+                <!-- <div class="todo">
+                    <li class="task-name">TASK</li>
+                    <div class="button-group">
+                        <button>done</button>
+                        <button>edit</button>
+                    </div>
+                </div> -->
+            </ul>
         </div>
 
     </section>
+    <script type="text/javascript" src="./js/app.js"></script>
+
 </body>
 </html>
